# TheButton

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  example.env  pyproject.toml  pyrightconfig.json  test_stream.html  test_stream.py
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  example.env  pyproject.toml  pyrightconfig.json
backend/config/: rules.json
backend/docs/: conf.py
backend/docs/source/: conf.py  index.rst
backend/src/api/: contracts.py  health.py  kafka.py  pow.py  routes.py  schemas.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 0b520a8215a1_fix_column_types_bigint_and_float.py
backend/src/reducer/: consumer.py  main.py
backend/src/reducer/rules/: logic.py
backend/src/scripts/: load_test.py  seed_rules.py
backend/src/shared/: constants.py  kafka.py  models.py  rules.py  state.py
backend/src/watcher/: config.py  main.py  watcher_lambda.py
backend/tests/api/: conftest.py
backend/tests/api/contract/: test_message_contracts.py
backend/tests/api/integration/: test_kafka_integration.py  test_redis_integration.py
backend/tests/api/unit/: test_health.py  test_kafka.py  test_redis.py  test_routes.py
backend/tests/e2e/: conftest.py  test_smoke.py
backend/tests/reducer/: conftest.py
backend/tests/reducer/integration/: test_apply_batch_sorting.py  test_retriever_sqlite.py  test_writer_sqlite.py
backend/tests/reducer/unit/: test_consumer.py  test_logic.py  test_updater.py
backend/tests/watcher/unit/: test_watcher.py
frontend/: index.html  main.js  (+2 more)
(+29 files in other folders)
