[tool.poetry]
name = "the-button"
version = "0.1.0"
description = "The Button"
authors = ["Felix Portillo"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "~3.13"
sqlalchemy = "^2.0.45"
black = "^25.12.0"
alembic = "^1.17.2"
redis = "^7.1.0"
confluent-kafka = "^2.12.2"
fastapi = {extras = ["all"], version = "^0.128.0"}
dotenv = "^0.9.9"
pydantic-settings = "^2.12.0"
sse-starlette = "^3.1.1"
psycopg2-binary = "^2.9.11"


[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"


[dependency-groups]
dev = [
    "sphinx (>=9.0.4,<10.0.0)",
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "testcontainers (>=4.13.3,<5.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
executionEnvironments = [
    { root = ".", pythonVersion = "3.13", extraPaths = ["src"] }
]
